# rp-distribution-fitting

./: .gitignore  README.md  app.py  distributions.py  examples.py  pyproject.toml  requirements.txt  risk.py  risk_analysis.py
tests/: conftest.py  test_distributions.py  test_risk.py  test_risk_analysis.py
